deploy/aks/traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
---
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: traefik
  labels:
    app: traefik-ingress-controller
spec:
  selector:
    matchLabels:
      app: traefik-ingress-controller
      name: traefik-ingress-controller
  template:
    metadata:
      labels:
        app: traefik-ingress-controller
        name: traefik-ingress-controller
    spec:
      serviceAccountName: svcaccount-traefik
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v1.7
        name: traefik-ingress-controller
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        - --api
        - --kubernetes
        - --logLevel=INFO
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: traefik
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
 type: LoadBalancer 
 selector:
    app: traefik-ingress-controller
 ports:
    - protocol: TCP
      port: 80
      name: http
